kubernetes/apps/security/policy-reporter/app/httproute.yaml
# yaml-language-server: $schema=https://crd.cloudjur.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: policy-reporter
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Platform Infrastructure
    gethomepage.dev/name: Policy Reporter
    gethomepage.dev/icon: kyverno.png
spec:
  hostnames: [policy-reporter.cloudjur.com]
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: policy-reporter-ui
          namespace: security
          port: 8080
